# nearmberle

./: app.vue  index.d.ts  nuxt.config.ts  package.json
client/: .npmrc  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  windi.config.ts
client/components/: GameBoard.vue  GuessForm.vue  KbdButton.vue  NewGameButton.vue  Player.vue  UserDropdown.vue  WalletComponent.vue
client/composables/: auth.ts
client/pages/: game.vue  index.vue
client/plugins/: near.client.ts
components/: GuessForm.vue  Player.vue  WalletAuth.vue
composables/: auth.ts  busy.ts  game.ts  nearmberle.ts  util.ts
contract/: Cargo.toml  README.md
contract/.devcontainer/: Dockerfile  dev.sh  devcontainer.json
contract/src/: contract.rs  generator.rs  lib.rs  numberle.rs  utils.rs
pages/: game.vue  index.vue
plugins/: near.client.ts  near.ts
server/routes/auth/: logout.ts  success.ts
