[package]
name = "nearmberle"
version = "0.1.0"
edition = "2021"
authors = ["Njenga Muriu <smuriu@tuta.io>"]

[dependencies]
near-sdk = "4.0.0-pre.9"
near-contract-standards = "4.0.0-pre.9"
ran = "0.3.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
